Update sorting notes

--- a/posts/ml/graph_ml/part_1/post.ipynb
+++ b/posts/ml/graph_ml/part_1/post.ipynb
@@ -2,14 +2,18 @@
  "cells": [
   {
    "cell_type": "raw",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
    "source": [
     "---\n",
     "title: \"Graph ML: Intro\"\n",
     "description: \"Part 4: Generative Adversarial Networks\"\n",
     "date: \"2024-04-01\"\n",
     "# image: \"deep_learning_model.png\"\n",
-    "categories: [AI, Engineering, Graphs]\n",
+    "categories: [AI, Engineering, Graphs, GraphML]\n",
     "draft: true\n",
     "# format:\n",
     "#   html:\n",
