--- a/posts/software/data_structures_algos/sorting/sorting.ipynb
+++ b/posts/software/data_structures_algos/sorting/sorting.ipynb
@@ -11,7 +11,7 @@
     "---\n",
     "title: \"Sorting Algorithms\"\n",
     "description: \"Algorithms? Sorted, mate.\"\n",
-    "date: \"2024-04-17\"\n",
+    "date: \"2024-05-07\"\n",
     "categories: [Engineering, ComputerScience, InterviewPrep]\n",
     "# format:\n",
     "#   html:\n",
@@ -40,6 +40,9 @@
     "Quicksort | $N log N$ | $N log N$ | $N^2$\n",
     "Merge sort | $N log N$ | $N log N$ | $N log N$\n",
     "Heap sort | $N log N$ | $N log N$ | $N log N$\n",
+    "Counting sort | $N + K$ | $N + K$ | $N + K$\n",
+    "Radix sort | $N * D$ | $N * D$ | $N * D$\n",
+    "\n",
     "\n",
     "Sorting is often a pre-requisite for other algorithms, so often as a pre-processing step we want to presort the array.\n",
     "This means the efficiency of the sort is important to the overall efficiency of many other problem types.\n",
@@ -1026,14 +1029,131 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 7. Radix Sort\n",
+    "## 7. Counting Sort\n",
+    "\n",
+    "We count how many of each element is in the array, i.e. how many 0s, how many 1s, how many 2s.\n",
+    "\n",
+    "From this we can then determine what the *starting position* of each element in the output will be. E.g. if there are three 0s then these will take the first three slots in the sorted output, so 1s will start at the fourth position.\n",
+    "\n",
+    "Counting sort works best when the number of unique items is small, i.e. there are lots of duplicates in the list.\n",
+    "\n",
+    "It is a **stable** sorting algorithm, meaning items with identical values in the input will retain their original ordering in the output.\n",
+    "\n",
+    "\n",
+    "### 7.1 Algorithm\n",
+    "<!-- https://www.youtube.com/watch?v=OKd534EWcdk -->\n",
+    "Say we want to sort the following array:\n",
+    "\n",
+    "```\n",
+    "[0, 1, 2, 0, 0, 1, 2, 1, 0, 0, 2, 1, 2]\n",
+    "```\n",
+    "\n",
+    "1. **Counting**: Count the *number of occurrences of each unique element* in the input list. How many 0s? How many 1s? How many 2s? Etc.\n",
+    "2. **Cumulative count**: Then calculate the *cumulative count of the elements*. This step determines the *starting position of each element* in the sorted output.\n",
+    "3. **Placement**: Finally, you *place each element* in its correct position in the sorted output based on its cumulative count.\n",
+    "\n",
+    "\n",
+    "### 7.2. Implementation\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def counting_sort(array):\n",
+    "    \"\"\"Counting sort algorithm to sort an array into ascending order.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    array: list\n",
+    "        The array that we wish to sort.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    sorted_array: list\n",
+    "        The sorted array.\n",
+    "    \"\"\"\n",
+    "    # 1. Count the elements in the input. \n",
+    "    max_val = max(array)\n",
+    "    count_store = [0] * (max_val + 1)\n",
+    "\n",
+    "    for num in array:\n",
+    "        count_store[num] += 1\n",
+    "    \n",
+    "    # 2. Cumulative count\n",
+    "    for i in range(1, len(count_store)):\n",
+    "        count_store[i] += count_store[i - 1]\n",
+    "        \n",
+    "    # 3. Place each element in its correct position in the sorted array\n",
+    "    sorted_array = [0] * len(array)\n",
+    "\n",
+    "    # for num in reversed(array):\n",
+    "    #     sorted_array[count_store[num] - 1] = num\n",
+    "    #     count_store[num] -= 1\n",
+    "\n",
+    "    for num in array:\n",
+    "        sorted_array[count_store[num] - 1] = num\n",
+    "        count_store[num] -= 1\n",
+    "    \n",
+    "    return sorted_array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 3, 5, 7, 8, 8, 9, 12, 23, 69, 420]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input_array = [8, 7, 5, 3, 1, 9, 0, 8, 23, 69, 420, 12]\n",
+    "counting_sort(input_array)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 7.3. Complexity\n",
+    "\n",
+    "The complexity of counting sort depends on the number of elements, $N$, and the number of *unique* elements, $K$.\n",
+    "\n",
+    "For each each of the steps:\n",
+    "\n",
+    "1. **Counting**: We loop through all $N$ elements. We also create a `count_store` array which takes $K$ elements of auxiliary space.\n",
+    "2. **Cumulative count**: We loop through the $K$ elements in the `count_store` array.\n",
+    "3. **Placement**: We initialise an output_array of size $N$, which therefore takes $N$ elements of auxiliary space. We then loop through the $N$ elements in the original array, using `count_store` to determine the correct placement.\n",
+    "\n",
+    "So there are $N + K + N$ steps and $N + K$ elements of auxiliary data.\n",
+    "\n",
+    "Time complexity: $O(N + K)$\n",
+    "\n",
+    "Auxiliary space: $O(N + K)$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 8. Radix Sort\n",
     "\n",
     "Radix sort is a sorting algorithm that sorts numbers by processing individual digits. \n",
     "\n",
     "It sorts numbers by first grouping the individual digits of the same place value together and sorting them. It starts sorting from the least significant digit (rightmost digit) to the most significant digit (leftmost digit).\n",
     "\n",
     "\n",
-    "### 7.1. Algorithm\n",
+    "### 8.1. Algorithm\n",
     "\n",
     "1. Start from the rightmost digit: Look at the least significant digit of each number. Group the numbers based on this digit.\n",
     "2. Sort each group: After grouping, the numbers are rearranged based on their digit value. So, all the numbers with the same rightmost digit are now together, and they are sorted within this group.\n",
@@ -1042,12 +1162,12 @@
     "\n",
     "By the end of this process, the numbers will be sorted because each time you look at a digit, the numbers are sorted according to that digit.\n",
     "\n",
-    "### 7.2. Implementation"
+    "### 8.2. Implementation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1091,7 +1211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1100,8 +1220,9 @@
        "[0, 1, 3, 5, 7, 8, 8, 9, 12, 23, 69, 420]"
       ]
      },
+     "execution_count": 24,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1113,7 +1234,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 7.3. Complexity\n",
+    "### 8.3. Complexity\n",
     "\n",
     "\n",
     "The time complexity of radix sort depends on the number of digits or the range of the input numbers. Let's denote:\n",
@@ -1139,7 +1260,12 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## References\n",
+    "\n",
+    "- Counting sort: https://www.youtube.com/watch?v=OKd534EWcdk\n",
+    "- Radix sort: https://www.youtube.com/watch?v=XiuSW_mEn7g"
+   ]
   }
  ],
  "metadata": {
