GJ-170 More sorting notes (#20)
* Heap sort notes

* Heap sort implementation

* Tidy and ordering

* Update sorting notes

* Render

--- a/posts/software/data_structures_algos/sorting/sorting.ipynb
+++ b/posts/software/data_structures_algos/sorting/sorting.ipynb
@@ -11,7 +11,7 @@
     "---\n",
     "title: \"Sorting Algorithms\"\n",
     "description: \"Algorithms? Sorted, mate.\"\n",
-    "date: \"2024-04-17\"\n",
+    "date: \"2024-05-07\"\n",
     "categories: [Engineering, ComputerScience, InterviewPrep]\n",
     "# format:\n",
     "#   html:\n",
@@ -38,6 +38,11 @@
     "Selection sort | $\\frac{N^2}{2}$ | $\\frac{N^2}{2}$ | $\\frac{N^2}{2}$\n",
     "Insertion sort | $N$ | $\\frac{N^2}{2}$ | $N^2$\n",
     "Quicksort | $N log N$ | $N log N$ | $N^2$\n",
+    "Merge sort | $N log N$ | $N log N$ | $N log N$\n",
+    "Heap sort | $N log N$ | $N log N$ | $N log N$\n",
+    "Counting sort | $N + K$ | $N + K$ | $N + K$\n",
+    "Radix sort | $N * D$ | $N * D$ | $N * D$\n",
+    "\n",
     "\n",
     "Sorting is often a pre-requisite for other algorithms, so often as a pre-processing step we want to presort the array.\n",
     "This means the efficiency of the sort is important to the overall efficiency of many other problem types.\n",
@@ -890,29 +895,279 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6. Radix Sort\n",
-    "\n",
-    "Radix sort is a sorting algorithm that sorts numbers by processing individual digits. It sorts numbers by first grouping the individual digits of the same place value together and sorting them. It starts sorting from the least significant digit (rightmost digit) to the most significant digit (leftmost digit).\n",
-    "\n",
-    "Here's an intuitive explanation:\n",
-    "\n",
-    "Imagine you have a bunch of numbers written on cards. You want to sort these numbers using radix sort. Instead of comparing the numbers directly, radix sort looks at the digits of each number.\n",
+    "## 6. Heap Sort\n",
     "\n",
     "### 6.1. Algorithm\n",
     "\n",
-    "1. Start from the rightmost digit: Look at the least significant digit of each number. Group the numbers based on this digit.\n",
-    "2. Sort each group: After grouping, the numbers are rearranged based on their digit value. So, all the numbers with the same rightmost digit are now together, and they are sorted within this group.\n",
-    "3. Move to the next digit: Now, look at the second rightmost digit and repeat the process. Group the numbers based on this digit and sort each group.\n",
-    "C4. ontinue until all digits are considered: Keep repeating this process until you've looked at all digits, moving towards the leftmost digit.\n",
+    "A max-heap is \"weakly sorted\"; the maximum value is the root of the heap, and nodes are greater than all of their descendants.\n",
     "\n",
-    "By the end of this process, the numbers will be sorted because each time you look at a digit, the numbers are sorted according to that digit.\n",
+    "We can use this property to sort data elements by creating a heap from the data, then popping the maximum value one-by-one to populate an array in order.\n",
+    "\n",
+    "1. **Build a heap**: Create a max-heap, which ensures the maximum value is at the root of the heap.\n",
+    "2. **Pop the root**: Remove the root and place it at the end of the result array.\n",
+    "3. **Heapify**: Rearrange the remaining blocks to form a new heap.\n",
+    "4. **Repeat**: Iterate through the entire heap until all elements are sorted.\n",
+    "\n",
     "\n",
     "### 6.2. Implementation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def heapify(array, heap_size, current_idx):\n",
+    "    \"\"\"Heapify function to maintain the max-heap property.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    array: list\n",
+    "        List of elements\n",
+    "    heap_size: int\n",
+    "        Size of heap\n",
+    "    current_idx: int\n",
+    "        Index of current node\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    None\n",
+    "        The input heap `array` is heapified in-place.\n",
+    "    \"\"\"\n",
+    "    # Track the largest node, initially assumed to be the root\n",
+    "    largest = current_idx  \n",
+    "    left_child = 2 * current_idx + 1\n",
+    "    right_child = 2 * current_idx + 2\n",
+    "\n",
+    "    # Check if the node's children, if it has any, are larger than the current node\n",
+    "    if left_child < heap_size and array[left_child] > array[largest]:\n",
+    "        largest = left_child\n",
+    "    if right_child < heap_size and array[right_child] > array[largest]:\n",
+    "        largest = right_child\n",
+    "\n",
+    "\n",
+    "    if largest != current_idx:\n",
+    "        # If largest is not root, swap it with root to maintain the heap condition\n",
+    "        array[current_idx], array[largest] = array[largest], array[current_idx]\n",
+    "        # Recursively heapify the affected sub-tree\n",
+    "        heapify(array, heap_size, largest)\n",
+    "\n",
+    "\n",
+    "def heap_sort(array):\n",
+    "    \"\"\"Heap sort algorithm to sort an array into ascending order.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    array: list\n",
+    "        The array that we wish to sort.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    array: list\n",
+    "        The sorted array sorted in-place.\n",
+    "    \"\"\"\n",
+    "    # 1. Build a max heap.\n",
+    "    # Start from the last non-leaf node, and heapify each node\n",
+    "    array_len = len(array)\n",
+    "    idx_last_non_leaf = array_len // 2 - 1\n",
+    "    idx_last_node = array_len - 1\n",
+    "\n",
+    "    for i in range(idx_last_non_leaf, -1, -1):\n",
+    "        heapify(array, array_len, i)\n",
+    "\n",
+    "    # 2. Extract elements one-by-one starting from the end\n",
+    "    for i in range(idx_last_node, 0, -1):\n",
+    "        array[i], array[0] = array[0], array[i]\n",
+    "        # 3. Maintain the heap condition for the unsorted portion of the array\n",
+    "        heapify(array, i, 0)\n",
+    "\n",
+    "    return array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 3, 5, 7, 8, 8, 9, 12, 23, 69, 420]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input_array = [8, 7, 5, 3, 1, 9, 0, 8, 23, 69, 420, 12]\n",
+    "heap_sort(input_array)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 6.3. Complexity\n",
+    "\n",
+    "The pre-processing step is to build the heap. This operation takes O(n) time.\n",
+    "\n",
+    "Once the heap is created, we perform the following operations:\n",
+    "\n",
+    "1. **Pop the max value**: This is accessible as it is the root, so $O(1)$ time.\n",
+    "2. **Insert at the end of the result array**: This is also $O(1)$ time.\n",
+    "3. **Heapifying**: This takes $O(log N)$ time.\n",
+    "\n",
+    "These are performed for each of the $N$ data elements, so the overall time complexity of heap sort is $O(N log N)$.\n",
+    "\n",
+    "This is the same regardless of the arrangement of the input, so the time complexity of heap sort is the same in the best case, average case, and worst case."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7. Counting Sort\n",
+    "\n",
+    "We count how many of each element is in the array, i.e. how many 0s, how many 1s, how many 2s.\n",
+    "\n",
+    "From this we can then determine what the *starting position* of each element in the output will be. E.g. if there are three 0s then these will take the first three slots in the sorted output, so 1s will start at the fourth position.\n",
+    "\n",
+    "Counting sort works best when the number of unique items is small, i.e. there are lots of duplicates in the list.\n",
+    "\n",
+    "It is a **stable** sorting algorithm, meaning items with identical values in the input will retain their original ordering in the output.\n",
+    "\n",
+    "\n",
+    "### 7.1 Algorithm\n",
+    "<!-- https://www.youtube.com/watch?v=OKd534EWcdk -->\n",
+    "Say we want to sort the following array:\n",
+    "\n",
+    "```\n",
+    "[0, 1, 2, 0, 0, 1, 2, 1, 0, 0, 2, 1, 2]\n",
+    "```\n",
+    "\n",
+    "1. **Counting**: Count the *number of occurrences of each unique element* in the input list. How many 0s? How many 1s? How many 2s? Etc.\n",
+    "2. **Cumulative count**: Then calculate the *cumulative count of the elements*. This step determines the *starting position of each element* in the sorted output.\n",
+    "3. **Placement**: Finally, you *place each element* in its correct position in the sorted output based on its cumulative count.\n",
+    "\n",
+    "\n",
+    "### 7.2. Implementation\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def counting_sort(array):\n",
+    "    \"\"\"Counting sort algorithm to sort an array into ascending order.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    array: list\n",
+    "        The array that we wish to sort.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    sorted_array: list\n",
+    "        The sorted array.\n",
+    "    \"\"\"\n",
+    "    # 1. Count the elements in the input. \n",
+    "    max_val = max(array)\n",
+    "    count_store = [0] * (max_val + 1)\n",
+    "\n",
+    "    for num in array:\n",
+    "        count_store[num] += 1\n",
+    "    \n",
+    "    # 2. Cumulative count\n",
+    "    for i in range(1, len(count_store)):\n",
+    "        count_store[i] += count_store[i - 1]\n",
+    "        \n",
+    "    # 3. Place each element in its correct position in the sorted array\n",
+    "    sorted_array = [0] * len(array)\n",
+    "\n",
+    "    # for num in reversed(array):\n",
+    "    #     sorted_array[count_store[num] - 1] = num\n",
+    "    #     count_store[num] -= 1\n",
+    "\n",
+    "    for num in array:\n",
+    "        sorted_array[count_store[num] - 1] = num\n",
+    "        count_store[num] -= 1\n",
+    "    \n",
+    "    return sorted_array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 3, 5, 7, 8, 8, 9, 12, 23, 69, 420]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input_array = [8, 7, 5, 3, 1, 9, 0, 8, 23, 69, 420, 12]\n",
+    "counting_sort(input_array)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 7.3. Complexity\n",
+    "\n",
+    "The complexity of counting sort depends on the number of elements, $N$, and the number of *unique* elements, $K$.\n",
+    "\n",
+    "For each each of the steps:\n",
+    "\n",
+    "1. **Counting**: We loop through all $N$ elements. We also create a `count_store` array which takes $K$ elements of auxiliary space.\n",
+    "2. **Cumulative count**: We loop through the $K$ elements in the `count_store` array.\n",
+    "3. **Placement**: We initialise an output_array of size $N$, which therefore takes $N$ elements of auxiliary space. We then loop through the $N$ elements in the original array, using `count_store` to determine the correct placement.\n",
+    "\n",
+    "So there are $N + K + N$ steps and $N + K$ elements of auxiliary data.\n",
+    "\n",
+    "Time complexity: $O(N + K)$\n",
+    "\n",
+    "Auxiliary space: $O(N + K)$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 8. Radix Sort\n",
+    "\n",
+    "Radix sort is a sorting algorithm that sorts numbers by processing individual digits. \n",
+    "\n",
+    "It sorts numbers by first grouping the individual digits of the same place value together and sorting them. It starts sorting from the least significant digit (rightmost digit) to the most significant digit (leftmost digit).\n",
+    "\n",
+    "\n",
+    "### 8.1. Algorithm\n",
+    "\n",
+    "1. Start from the rightmost digit: Look at the least significant digit of each number. Group the numbers based on this digit.\n",
+    "2. Sort each group: After grouping, the numbers are rearranged based on their digit value. So, all the numbers with the same rightmost digit are now together, and they are sorted within this group.\n",
+    "3. Move to the next digit: Now, look at the second rightmost digit and repeat the process. Group the numbers based on this digit and sort each group.\n",
+    "4. Continue until all digits are considered: Keep repeating this process until you've looked at all digits, moving towards the leftmost digit.\n",
+    "\n",
+    "By the end of this process, the numbers will be sorted because each time you look at a digit, the numbers are sorted according to that digit.\n",
+    "\n",
+    "### 8.2. Implementation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -956,7 +1211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -965,7 +1220,7 @@
        "[0, 1, 3, 5, 7, 8, 8, 9, 12, 23, 69, 420]"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -979,7 +1234,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 6.3. Complexity\n",
+    "### 8.3. Complexity\n",
     "\n",
     "\n",
     "The time complexity of radix sort depends on the number of digits or the range of the input numbers. Let's denote:\n",
@@ -1006,96 +1261,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 7. Heap Sort\n",
+    "## References\n",
     "\n",
-    "Builds a heap data structure from the input data and then repeatedly removes the largest element from the heap and inserts it into the sorted array.\n",
-    "\n",
-    "Imagine you have a pile of numbered blocks, and you want to sort them from smallest to largest. You could use a heap sort to do this.\n",
-    "\n",
-    "### 7.1. Algorithm\n",
-    "\n",
-    "1. Build a heap. First, you arrange the blocks into a special structure called a heap. In a heap, each block is either larger than or equal to its parent block (max heap), or smaller than or equal to its parent block (min heap). This means the largest (or smallest) block is at the root of the heap.\n",
-    "1. Heapify: Once you have your heap, you remove the root block (which is the largest or smallest, depending on the type of heap) and place it at the end of your sorted list. Then, you rearrange the remaining blocks to form a new heap.\n",
-    "3. Sorting: Repeat this process until all elements are sorted.\n",
-    "\n",
-    "\n",
-    "### 7.2. Implementation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 128,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def heapify(arr, n, i):\n",
-    "    largest = i  # Initialize largest as root\n",
-    "    left = 2 * i + 1\n",
-    "    right = 2 * i + 2\n",
-    "\n",
-    "    # Check if left child exists and is greater than root\n",
-    "    if left < n and arr[left] > arr[largest]:\n",
-    "        largest = left\n",
-    "\n",
-    "    # Check if right child exists and is greater than the largest so far\n",
-    "    if right < n and arr[right] > arr[largest]:\n",
-    "        largest = right\n",
-    "\n",
-    "    # Change root, if needed\n",
-    "    if largest != i:\n",
-    "        arr[i], arr[largest] = arr[largest], arr[i]  # Swap\n",
-    "        # Heapify the affected sub-tree\n",
-    "        heapify(arr, n, largest)\n",
-    "\n",
-    "def heap_sort(arr):\n",
-    "    n = len(arr)\n",
-    "\n",
-    "    # Build a max heap.\n",
-    "    for i in range(n // 2 - 1, -1, -1):\n",
-    "        heapify(arr, n, i)\n",
-    "\n",
-    "    # One by one extract elements\n",
-    "    for i in range(n - 1, 0, -1):\n",
-    "        arr[i], arr[0] = arr[0], arr[i]  # Swap\n",
-    "        heapify(arr, i, 0)\n",
-    "\n",
-    "    return arr"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 130,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0, 1, 3, 5, 7, 8, 8, 9, 12, 23, 69, 420]"
-      ]
-     },
-     "execution_count": 130,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "input_array = [8, 7, 5, 3, 1, 9, 0, 8, 23, 69, 420, 12]\n",
-    "heap_sort(input_array)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 7.3. Complexity\n",
-    "\n",
-    "There are two steps in the algorithm:\n",
-    "\n",
-    "1. Building the heap (heapify): This operation takes O(n) time.\n",
-    "2. Extracting the maximum (or minimum) element and heapifying: This operation is performed n times, each taking O(log n) time.\n",
-    "Since both operations are performed independently of each other, the overall time complexity of heap sort remains O(n log n) across all cases.\n",
-    "\n",
-    "The time complexity of heap sort in the best case, average case, and worst case is the same, $O(N log N)$.\n"
+    "- Counting sort: https://www.youtube.com/watch?v=OKd534EWcdk\n",
+    "- Radix sort: https://www.youtube.com/watch?v=XiuSW_mEn7g"
    ]
   }
  ],
