Add graph intro notes and graph algo notes

--- a/posts/software/data_structures_algos/algorithms/algorithms.ipynb
+++ b/posts/software/data_structures_algos/algorithms/algorithms.ipynb
@@ -12,7 +12,7 @@
     "title: \"Algorithms\"\n",
     "description: \"Big G Explains Big O\"\n",
     "date: \"2024-04-17\"\n",
-    "categories: [Engineering, ComputerScience, InterviewPrep]\n",
+    "categories: [Engineering, ComputerScience, InterviewPrep, Algorithms]\n",
     "# format:\n",
     "#   html:\n",
     "#     code-fold: true\n",
