--- a/posts/software/data_structures_algos/sorting/sorting.ipynb
+++ b/posts/software/data_structures_algos/sorting/sorting.ipynb
@@ -12,7 +12,7 @@
     "title: \"Sorting Algorithms\"\n",
     "description: \"Algorithms? Sorted, mate.\"\n",
     "date: \"2024-05-07\"\n",
-    "categories: [Engineering, ComputerScience, InterviewPrep]\n",
+    "categories: [Engineering, ComputerScience, InterviewPrep, Algorithms]\n",
     "# format:\n",
     "#   html:\n",
     "#     code-fold: true\n",
