Update graph intro and algo notes

--- a/posts/ml/generative_deep_learning/lesson5/AR_Models.ipynb
+++ b/posts/ml/generative_deep_learning/lesson5/AR_Models.ipynb
@@ -15,6 +15,7 @@
     "date: \"2024-06-10\"\n",
     "# image: \"deep_learning_model.png\"\n",
     "categories: [AI, Engineering, GenerativeAI, NLP]\n",
+    "draft: true\n",
     "# format:\n",
     "#   html:\n",
     "#     code-fold: true\n",
