--- a/posts/ml/graph_ml/part_1_2/graph_algorithms.ipynb
+++ b/posts/ml/graph_ml/part_1_2/graph_algorithms.ipynb
@@ -11,8 +11,8 @@
    "source": [
     "---\n",
     "title: \"Graph ML: Graph Algorithms\"\n",
-    "description: \"Part 0.5: Traditional Grpah Algorithms\"\n",
-    "date: \"2024-05-09\"\n",
+    "description: \"Part 0.5: Traditional Graph Algorithms\"\n",
+    "date: \"2024-05-08\"\n",
     "# image: \"deep_learning_model.png\"\n",
     "categories: [AI, Engineering, Graphs, GraphML, Algorithms]\n",
     "---"
@@ -37,6 +37,8 @@
     "\n",
     "### 1.1. Depth-First Search (DFS)\n",
     "\n",
+    "Start at the root node and go as deep as possible before backtracking.\n",
+    "\n",
     "DFS is a recursive algorithm where we keep track of the nodes visited so far. \n",
     "\n",
     "It is similar to the binary tree traversal algorithm, which shouldn't be surprising since a tree is a type of graph and we want to traverse it to find our target node.\n",
@@ -47,8 +49,11 @@
     "2. **Visit the node**: Add the current node to the `visited_nodes` hash table.\n",
     "3. **Recursively visit neighbors**: Iterate through the current node's neighbors. If the neighbor has already been visited, ignore it. Otherwise, recursively call DFS on the unvisited neighbor, i.e. go back to Step 2.\n",
     "\n",
+    "DFS can be used to find **cycles**, because a node will be visited twice during traversal if and only if a cycle exists.\n",
     "\n",
     "### 1.2. Breadth-First Search (BFS)\n",
+    "\n",
+    "Start at the root node and explore all neighbors before going deeper.\n",
     "\n",
     "BFS does not rely on recursion, instead using a *queue*  to track the execution order.\n",
     "\n",
@@ -61,6 +66,9 @@
     "\n",
     "\n",
     "### 1.3. A* Algorithm\n",
+    "\n",
+    "\n",
+    "### 1.4. Bidirectional Search\n",
     "\n",
     "\n",
     "## 2. Shortest Path Algorithms\n",
@@ -97,11 +105,12 @@
    "source": [
     "## 4. Further Topics in Graph Theory\n",
     "\n",
+    "- Tarjan's strongly connected components algorithm\n",
     "- Topological sort\n",
-    "- Bidirectional search\n",
     "- Floyd-Warshall algorithms\n",
     "- Bellman-Ford algorithm\n",
-    "- Graph coloring"
+    "- Graph coloring\n",
+    "- Min-cut max-flow"
    ]
   },
   {
