--- a/posts/ml/ml_fundamentals/part1/ml_fundamentals.ipynb
+++ b/posts/ml/ml_fundamentals/part1/ml_fundamentals.ipynb
@@ -14,7 +14,7 @@
     "description: \"Machine Learning Fundamentals\"\n",
     "date: \"2024-05-30\"\n",
     "categories: [Engineering, AI, InterviewPrep]\n",
-    "# draft: true\n",
+    "draft: true\n",
     "# format:\n",
     "#   html:\n",
     "#     code-fold: true\n",
