--- a/posts/ml/graph_ml/part_1/graph_notes.ipynb
+++ b/posts/ml/graph_ml/part_1/graph_notes.ipynb
@@ -9,9 +9,9 @@
    },
    "source": [
     "---\n",
-    "title: \"Graph ML: Intro\"\n",
+    "title: \"Graph ML: What's a Graph?\"\n",
     "description: \"Part 0: Intro to Graphs\"\n",
-    "date: \"2024-05-08\"\n",
+    "date: \"2024-05-07\"\n",
     "# image: \"deep_learning_model.png\"\n",
     "categories: [AI, Engineering, Graphs, GraphML]\n",
     "---"
@@ -40,11 +40,25 @@
     "\n",
     "Graphs are the general case of trees. A graph is broadly something with nodes and edges. A tree is a graph that has *no cycles* and all nodes are *connected*.\n",
     "\n",
-    "A **directed graph** shows where relationships can be directional, e.g. social network followers.\n",
+    "A **directed graph** or **digraph** shows where relationships can be directional, e.g. social network followers.\n",
     "\n",
-    "Edges can be **weighted** or unweighted.\n",
+    "Edges can be **weighted** to represent quantities like distance or cost.\n",
     "\n",
-    "A **path** is the sequence of edges used to get from one vertex to another."
+    "A **path** is the sequence of edges used to get from one vertex to another.\n",
+    "\n",
+    "A **simple path** does not visit any node more than once.\n",
+    "\n",
+    "A graph is **connected** if there is a path between every pair of vertices, i.e. there are no isolated nodes or clusters.\n",
+    "\n",
+    "A **cycle** is a path where the first and last nodes are the same.\n",
+    "\n",
+    "### 1.2. Types of Graphs\n",
+    "\n",
+    "- **Tree**: An undirected graph with no cycles.\n",
+    "- **Rooted tree**: A tree where one node is designated ads the root.\n",
+    "- **Directed Acyclic Graph (DAG)**: A directed graph with no cycles. This means edges can only be traversed in a particular direction.\n",
+    "- **Bipartite graphs**: A graph where vertices can be divided into two disjoint sets.\n",
+    "- **Complete graph**: A graph where every pair of vertices is connected by an edge, i.e. it is fully connected."
    ]
   },
   {
@@ -58,8 +72,9 @@
     "Some common options are:\n",
     "\n",
     "1. Objects and pointers\n",
-    "2. Adjacency lists AKA edge lists\n",
-    "3. Adjacency matrix\n",
+    "2. Adjacency lists \n",
+    "3. Edge lists\n",
+    "4. Adjacency matrix\n",
     "\n",
     "\n",
     "Each approach has its own trade-offs in terms of memory usage, ease of implementation, and efficiency based on the specific characteristics of the graph you're dealing with.\n",
@@ -101,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -188,21 +203,22 @@
     "\n",
     "Pros:\n",
     "\n",
-    "- Efficient memory usage for sparse graphs.\n",
+    "- Efficient memory usage for sparse graphs - $O(V + E)$ space complexity.\n",
     "- Easy to implement and understand.\n",
     "- Suitable for graphs with varying degrees of connectivity.\n",
+    "- Easy to iterate through neighbors.\n",
     "\n",
     "Cons:\n",
     "\n",
     "- Slower for dense graphs.\n",
-    "- Retrieving edge information may require linear search.\n",
+    "- Checking if nodes are connected is slow - retrieving edge information may require linear search.\n",
     "\n",
     "Python Implementation:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +257,62 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.3. Adjacency Matrix\n",
+    "### 2.3. Edge Lists\n",
+    "\n",
+    "An even more compact form is the **edge list**, which lists all of the edges as `(source_node, target_node)` tuples.\n",
+    "\n",
+    "Pros:\n",
+    "\n",
+    "- Even more efficient memory usage for sparse graphs - $O(E)$ space complexity.\n",
+    "\n",
+    "\n",
+    "Cons:\n",
+    "\n",
+    "- Slower for dense graphs.\n",
+    "- Checking if nodes are connected is slow - retrieving edge information may require linear search.\n",
+    "\n",
+    "Python Implementation:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, 2), (2, 3)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Graph:\n",
+    "    def __init__(self):\n",
+    "        self.edge_list = []\n",
+    "\n",
+    "    def __repr__(self) -> str:\n",
+    "        return str(self.edge_list)\n",
+    "\n",
+    "    def add_edge(self, node1, node2):\n",
+    "        node_pair = (node1, node2)\n",
+    "        if node_pair not in self.edge_list:\n",
+    "            self.edge_list.append(node_pair)\n",
+    "\n",
+    "\n",
+    "graph = Graph()\n",
+    "graph.add_edge(1, 2)\n",
+    "graph.add_edge(2, 3)\n",
+    "\n",
+    "print(graph)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.4. Adjacency Matrix\n",
     "\n",
     "In this approach, we represent the graph as a 2D matrix where rows and columns represent nodes, and matrix cells indicate whether there's an edge between the nodes.\n",
     "\n",
@@ -250,20 +321,19 @@
     "Pros:\n",
     "\n",
     "- Efficient for dense graphs.\n",
-    "- Constant time access to check edge existence.\n",
+    "- Constant time access to check edge existence; checking if nodes are connected is $O(1)$.\n",
     "\n",
     "Cons:\n",
     "\n",
-    "- Consumes more memory for sparse graphs.\n",
-    "- Adding/removing nodes can be expensive as it requires resizing the matrix.\n",
-    "- Not ideal for graphs with a large number of nodes due to space complexity.\n",
+    "- Not ideal for graphs with a large number of nodes due to $O(V^2)$ space complexity. This is particularly bad for sparse graphs.\n",
+    "- Adding/removing nodes can be expensive as it requires resizing the matrix. Bad for dynamic graphs.\n",
     "\n",
     "Python Implementation:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +375,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Implementing a Grpah with networkx\n",
+    "## 3. Implementing a Graph with networkx\n",
     "\n",
     "Grpahs are common enough to work with that we don't need to implement them from scratch every time we want ot use them (although doing so in the previous section is instructive).\n",
     "\n",
@@ -314,9 +384,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Graph with 7 nodes and 7 edges\n"
+     ]
+    }
+   ],
    "source": [
     "import networkx as nx\n",
     "\n",
@@ -344,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +431,7 @@
        "AdjacencyView({'A': {'B': {}, 'C': {}}, 'B': {'A': {}, 'D': {}, 'E': {}}, 'C': {'A': {}, 'F': {}, 'G': {}}, 'D': {'B': {}}, 'E': {'B': {}}, 'F': {'C': {}}, 'G': {'C': {}, 'G': {}}})"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,14 +449,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/8k/8jqhnfbd1t99blb07r1hs5440000gn/T/ipykernel_14344/1468791322.py:1: FutureWarning: adjacency_matrix will return a scipy.sparse array instead of a matrix in Networkx 3.0.\n",
+      "/var/folders/8k/8jqhnfbd1t99blb07r1hs5440000gn/T/ipykernel_50230/1468791322.py:1: FutureWarning: adjacency_matrix will return a scipy.sparse array instead of a matrix in Networkx 3.0.\n",
       "  nx.adjacency_matrix(graph).todense()\n"
      ]
     },
@@ -394,7 +472,7 @@
        "        [0, 0, 1, 0, 0, 0, 1]])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,12 +485,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Old"
+    "## 4. Graph Metrics\n",
+    "\n",
+    "### 4.1. Degree of a Node\n",
+    "\n",
+    "This is the number of edges which are incident on a node.\n",
+    "\n",
+    "For an **undirected** graph, this is the number of edges connected to the node. **Self-loops** add 2 to the degree.\n",
+    "\n",
+    "For a **directed** graph, we can distinguish the *indegree*, $deg^-(V)$, as the edges that point towards the node. The *outdegree*, $deg^+(V)$, denotes the edges that start from the node. **Self-loops** add 1 to the indegree and 1 to the outdegree."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -421,18 +507,33 @@
        "DegreeView({'A': 2, 'B': 3, 'C': 3, 'D': 1, 'E': 1, 'F': 1, 'G': 3})"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "g.degree"
+    "graph.degree"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.2. Centraility\n",
+    "\n",
+    "Centrality measures the importance of a given node in a network. \n",
+    "\n",
+    "There a different formulations of centrality:\n",
+    "\n",
+    "- **Degree centrality**: This is simply the degree of the node. *How many neighbours?*\n",
+    "- **Closeness centrality**: The average length of the shortest path between this node and all others. *How fast can I reach my neighbours?*\n",
+    "- **Betweenness centrality**: The number of times a node lies on the shortest path between pairs of other nodes in the graph. *How often am  I the bottelneck/bridge for others?*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -447,18 +548,18 @@
        " 'G': 0.5}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "nx.degree_centrality(g)"
+    "nx.degree_centrality(graph)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -473,18 +574,18 @@
        " 'G': 0.375}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "nx.closeness_centrality(g)"
+    "nx.closeness_centrality(graph)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -493,56 +594,46 @@
        "{'A': 0.6, 'B': 0.6, 'C': 0.6, 'D': 0.0, 'E': 0.0, 'F': 0.0, 'G': 0.0}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "nx.betweenness_centrality(g)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 3. Graph Metrics\n",
-    "\n",
-    "Connectedness\n",
-    "\n",
-    "\n",
-    "## 4. Graph Search\n",
-    "\n",
-    "### 4.1. Depth-First Search\n",
-    "\n",
-    "\n",
-    "### 4.2. Breadth-First Search\n",
-    "\n",
-    "\n",
-    "## 5. Graph Algorithms\n",
-    "\n",
-    "### 5.1. Dijkstra's Algorithm\n",
-    "\n",
-    "\n",
-    "### 5.2. A* Algorithm\n",
-    "\n",
-    "\n",
-    "### 5.3. Kruskal's Algorithm\n",
-    "\n",
-    "\n",
-    "### 5.4. Prim's Algorithm"
+    "nx.betweenness_centrality(graph)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## N. Graph Learning\n",
+    "### 4.3. Connectedness\n",
+    "\n",
+    "#### 4.3.1. Minimum Cut\n",
+    "\n",
+    "This is the minimum number of edges that would need to be removed to make the graph disconnected.\n",
+    "\n",
+    "How easy is it to create isolated nodes/clusters?\n",
+    "\n",
+    "This is a measure of **connectedness**.\n",
+    "\n",
+    "\n",
+    "#### 4.3.2. Density\n",
+    "\n",
+    "This is the ratio of the number of edges in the grap to the maximum possible number of edges between all nodes.\n",
+    "\n",
+    "For a directed graph with $n$ nodes, the maximum number of edges is $n(n-1)$.\n",
+    "\n",
+    "For an undirected graph with $n$ nodes, the maximum number of edges is $\\frac{n(n-1)}{2}$.\n",
+    "\n",
+    "Broadly speaking, a graph is considered **dense** if $density > 0.5$ and **sparse** if $density < 0.1$.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Why Use Graph Learning?\n",
     "\n",
     "There are several categories of learning tasks we may want to perform on a graph:\n",
     "\n",
@@ -555,8 +646,18 @@
     "There are several prominent families of graph learning techniques:\n",
     "\n",
     "1. **Graph signal processing**: Apply traditional signal processing techniques like Fourier analysis to graphs to study its connectivity and structure.\n",
-    "2. **Matrix factorisation**:"
+    "2. **Matrix factorisation**: Find low-dimensional representations of large matrices\n",
+    "3. **Random walk**: Simulate random walks over a graph, e.g. to generate training date for downstream models.\n",
+    "4. **Deep learning**: Encode the graph as tensors and perform deep learning.\n",
+    "\n",
+    "\n",
+    "Traditional tabular datasets focus on the entities which are represented as rows. But often, the relationships *between* entities contain vital information. Global features, such as network-wide statistics, may also provide useful information. "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
