--- a/posts/ml/graph_ml/part_1/graph_notes.ipynb
+++ b/posts/ml/graph_ml/part_1/graph_notes.ipynb
@@ -528,7 +528,7 @@
     "\n",
     "- **Degree centrality**: This is simply the degree of the node. *How many neighbours?*\n",
     "- **Closeness centrality**: The average length of the shortest path between this node and all others. *How fast can I reach my neighbours?*\n",
-    "- **Betweenness centrality**: The number of times a node lies on the shortest path between pairs of other nodes in the graph. *How often am  I the bottelneck/bridge for others?*"
+    "- **Betweenness centrality**: The number of times a node lies on the shortest path between pairs of other nodes in the graph. *How often am  I the bottleneck/bridge for others?*"
    ]
   },
   {
