--- a/posts/ml/ml_fundamentals/part1/ml_fundamentals.ipynb
+++ b/posts/ml/ml_fundamentals/part1/ml_fundamentals.ipynb
@@ -34,17 +34,18 @@
     "\n",
     "\n",
     "## 2. The Training Loop\n",
-    "Model produces a prediction\n",
-    "Loss function f(prediction, label)\n",
-    "Backprop gradients of loss\n",
-    "Optimiser adjusts weights based on gradients.\n",
+    "\n",
+    "1. Model produces a prediction\n",
+    "2. Loss function f(prediction, label)\n",
+    "3. Backprop gradients of loss\n",
+    "4. Optimiser adjusts weights based on gradients.\n",
     "\n",
     "\n",
     "## 3. Loss Functions\n",
     "Draw a flowchart:\n",
     "\n",
     "Classification: (Binary) cross entropy\n",
-    "REgression: MSE, MAE\n",
+    "Regression: MSE, MAE\n",
     "\n",
     "Write mathemetical definitions of each an intuitive explanation.\n",
     "\n",
@@ -57,6 +58,7 @@
     "But this can be confusing - I can look over there and see it's lower, why don't I just walk straight there?\n",
     "\n",
     "The analogy is missing a few caveats:\n",
+    "\n",
     "1. **You're blindfolded**: The \"function\" learned by our model isn't one that has a neat closed form solution that we can plot to see at every point. It's got so many dimensions the best we can do is sample one point at a time.\n",
     "2. **You're teleporting**. Each \"step\" that you take isn't a smooth continuous roll; you don't learn anything about the points in between your start point and end point when you take a step, you only know where you started and where you finished. If you happened to \"step over\" a minimum, you'd have no way of knowing.\n",
     "\n",
@@ -73,10 +75,22 @@
     "- bias/variance trade off\n",
     "\n",
     "### 5.2. Weight regularisation penalty terms\n",
+    "\n",
+    "\n",
+    "Regularisation terms are bias terms - they tell us which model to prefer (bias towards) in the absence of data. \n",
+    "\n",
     "Norms:\n",
     ">= 1 encourages convexity\n",
     "<= 1 encourages sparsity of weights\n",
-    "Link youtube video\n",
+    "\n",
+    "\n",
+    "Norms >= 1 are convex, which makes optimisation easier. \n",
+    "\n",
+    "Norms <= 1 encourage sparsity of weights. Think of an expanding balloon - your more likely to hit the corner of a square (L1 norm), whereas the L2 norm is like the balloon hitting a ball, it’s equally likely to hit at any point not just the axes. \n",
+    "\n",
+    "So the L1 norm is a balance between sparsity and convexity. \n",
+    "\n",
+    "Link youtube video: https://youtu.be/sO4ZirJh9ds?si=7RMI1y4NmcejRBs5\n",
     "\n",
     "### 5.3. Other forms of regularisation\n",
     "\n",
@@ -91,17 +105,24 @@
     "## 7. Common Supervised Algorithms\n",
     "Understand and know when to apply.\n",
     "\n",
-    "Ridge/Lasso regression\n",
-    "Logistic regression\n",
-    "Decision trees\n",
-    "SVM - duality\n",
+    "- Ridge/Lasso regression\n",
+    "- Logistic regression\n",
+    "- Decision trees\n",
+    "- SVM - duality\n",
     "\n",
     "\n",
     "## 8. Common Unsupervised Algorithms\n",
-    "PCA\n",
-    "K-means\n",
-    "t-SNE\n",
-    "Understand and know when to apply.\n"
+    "Understand and know when to apply.\n",
+    "\n",
+    "- PCA\n",
+    "- K-means\n",
+    "- t-SNE\n",
+    "\n",
+    "\n",
+    "\n",
+    "## References\n",
+    "\n",
+    "- [Explanation of L1 vs L2 norms](https://youtu.be/sO4ZirJh9ds?si=7RMI1y4NmcejRBs5)"
    ]
   },
   {
