GJ-186 Graph intro notes (#21)
* Add graph intro notes and graph algo notes

* Update graph intro and algo notes

* Typo

* Render

--- a/posts/software/data_structures_algos/sorting/sorting.ipynb
+++ b/posts/software/data_structures_algos/sorting/sorting.ipynb
@@ -11,8 +11,8 @@
     "---\n",
     "title: \"Sorting Algorithms\"\n",
     "description: \"Algorithms? Sorted, mate.\"\n",
-    "date: \"2024-05-07\"\n",
-    "categories: [Engineering, ComputerScience, InterviewPrep]\n",
+    "date: \"2024-05-06\"\n",
+    "categories: [Engineering, ComputerScience, InterviewPrep, Algorithms]\n",
     "# format:\n",
     "#   html:\n",
     "#     code-fold: true\n",
